// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-jXbUNg dNPpAp sc-kpDqfm OrTuB r5-widget"
    transition="entering"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div
        id="email-registering-credential"
      >
        <div
          class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
        >
          mfa.email.explain
        </div>
        <form
          class="sc-feUZmu ikOiKM"
          novalidate=""
        >
          <button
            class="sc-dAlyuH cDcaOi"
            data-testid="submit"
            type="submit"
          >
            mfa.register.email
          </button>
        </form>
      </div>
      <div
        class="sc-gsFSXq cvkYjx"
      >
        <span>
          or
        </span>
      </div>
      <div
        id="phone-number-registering-credential"
      >
        <div
          class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
        >
          mfa.phoneNumber.explain
        </div>
        <form
          class="sc-feUZmu ikOiKM"
          novalidate=""
        >
          <div
            class="sc-cPiKLX hOWbQm"
            required=""
          >
            <label
              class="sc-cwHptR dktyOh"
              for="phone_number"
            >
              phoneNumber
            </label>
            <input
              autocomplete="tel"
              class="sc-eDPEul gmhWzm"
              data-testid="phone_number"
              id="phone_number"
              labels="[object Object]"
              name="phone_number"
              placeholder="phoneNumber"
              required=""
              type="tel"
              value=""
            />
          </div>
          <button
            class="sc-dAlyuH cDcaOi"
            data-testid="submit"
            type="submit"
          >
            mfa.register.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-jXbUNg dNPpAp sc-kpDqfm OrTuB r5-widget"
    transition="entering"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div>
        <form
          class="sc-feUZmu ikOiKM"
          novalidate=""
        >
          <button
            class="sc-dAlyuH bTPjVT"
            type="submit"
          >
            mfa.remove.email
          </button>
        </form>
      </div>
      <div
        class="sc-gsFSXq cvkYjx"
      >
        <span>
          or
        </span>
      </div>
      <div>
        <form
          class="sc-feUZmu ikOiKM"
          novalidate=""
        >
          <button
            class="sc-dAlyuH bTPjVT"
            type="submit"
          >
            mfa.remove.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
